--- a/src/css/main.css
+++ b/src/css/main.css
@@ -605,6 +605,23 @@ video {
   }
 }
 
+.container{
+  max-width: 1200px;
+  margin: auto;
+  overflow: hidden;
+}
+
+.btn{
+  display: inline-block;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  text-transform: uppercase;
+  border-radius: 0.5rem;
+  font-weight: 600
+}
+
 .space-y-0 > :not(template) ~ :not(template) {
   --space-y-reverse: 0;
   margin-top: calc(0px * calc(1 - var(--space-y-reverse)));
