--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -1,3 +1,14 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
+
+.container{
+    max-width: 1200px;
+    margin: auto;
+    overflow: hidden;
+}
+
+.btn{
+    @apply inline-block py-2 px-4 uppercase rounded-lg font-semibold
+}
+
 @import 'tailwindcss/utilities';
