--- a/src/css/main.css
+++ b/src/css/main.css
@@ -605,11 +605,11 @@ video {
   }
 }
 
-/* .container{
-    max-width: 1200px;
-    margin: auto;
-    overflow: hidden;
-} */
+.container {
+  margin: 0 auto;
+  max-width: 1280px;
+  width: 90%;
+}
 
 .btn{
   display: inline-block;
