--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -1,11 +1,11 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 
-/* .container{
-    max-width: 1200px;
-    margin: auto;
-    overflow: hidden;
-} */
+.container {
+    margin: 0 auto;
+    max-width: 1280px;
+    width: 90%;
+}
 
 .btn{
     @apply inline-block py-2 px-4 uppercase rounded-lg font-semibold
